<resources>
    <string name="app_name">SearchTheWord</string>
    <string name="screen_2">Screen 2</string>
    <string name="search_the_word">Search the Word</string>
    <string name="home">Home</string>
    <string name="easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="back">BACK</string>
    <string name="start_game">Play Game</string>
    <string name="high_scores">High Scores</string>
    <string name="instructions">Instructions</string>
    <string name="options">Options</string>
    <string name="play_game">Play Game</string>
    <string name="textLevel">LEVEL:</string>
    <string name="textTimer">TIME REMAINING:</string>
    <string name="textScore">SCORE:</string>
    <string name="startingScore">0</string>
    <string name="restart">Restart</string>
    <string name="volume">Volume</string>
    <string name="main_menu">Main Menu</string>
    <string name="back_btn">Back</string>
    <string name="settings">Settings</string>
</resources>
